--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# This is for github project pages  <!--we only have to do this because we are using a github project page and not our username page-->
+# This is for github project pages  
 # noahboyle.github.io/jekyll
 # noahboyle.github.io
 baseurl: /blog
